static/css/style.css
body {
    padding: 0;
    margin: 0;
}

html,
body {
    height: 100%;
    width: 100vw;
}

#map {
    height: 100%;
    width: 100%;
    left: 0vw;
    z-index: 1;
}

#topbar,
.button,
#sidebar-container,
#last-position-button {
    border-radius: 20px;
    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%),
        0 2px 10px 0 rgb(0 0 0 / 12%);

    text-align: center;

    background-color: #323232;
    color: #ffffff;

    z-index: 2;
}


#topbar {
    position: absolute;
    left: 0;
    right: 0;
    margin: 0 auto;
    margin-top: 30px;
    width: 320px;

}

#sidebar-container {
    position: absolute;
    right: -1000px;
    width: 250px;

    margin-top: 30px;
    margin-right: 30px;

    height: -webkit-calc(100% - 180px);

    margin-top: 150px;
    margin-bottom: 30px;

    display: flex;
    justify-content: center;
    align-items: center;
}

.sidebar-container-in {
    transition: 0.25s;
    right: 0 !important;
}

.sidebar-container-out {
    transition: 0.25s;
    right: -1000px !important;
}

#sidebar-content {
    overflow: auto;
    background-color: inherit;
    color: inherit;
    height: inherit;
    width: 220px;
    z-index: 3;
    box-shadow: 0px 0px 0px 0px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.button {
    position: absolute;
    right: 0;

    margin-top: 30px;
    margin-right: 30px;

    border-radius: 50px;

    border: none;

    text-align: center;
    text-decoration: none;
    display: inline-block;

    font-size: 20px;
    width: 55px;
    height: 55px;
}

.button:hover {
    background-color: #484848;
}

#last-position-button {
    right: 100px;
    width: 150px;
    border-radius: 20px;
}

#last-position-button:hover {
    background-color: #484848;
}

@media screen and (min-width: 320px) and (max-width: 840px) {


    #last-position-button {
        right: 0px;
        top: 75px;
        width: 150px;
        border-radius: 20px;
    }

    #topbar {
        position: absolute;
        left: 0;
        right: 0;
        margin: 0 auto;
        margin-top: 30px;
        width: 320px;
    }

    #sidebar-container {
        position: absolute;
        width: -webkit-calc(100% - 60px);
        height: 300px;
        bottom: 0;
    }

    #sidebar-content {
        overflow: auto;
        background-color: inherit;
        color: inherit;
        height: inherit;
        width: -webkit-calc(100% - 100px);
        z-index: 3;
        box-shadow: 0px 0px 0px 0px;
        padding-top: 10px;
        padding-bottom: 10px;
    }


    .sidebar-container-in {
        transition: 0.25s;
        right: 0 !important;
    }

    .sidebar-container-out {
        transition: 0.25s;
        right: -1000px !important;
    }

    #last-position-button:hover {
        background-color: #484848;
    }
}

.active {
    right: 0 !important;
    transform: translate(0, 0) !important;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: #323232;
}

::-webkit-scrollbar-thumb {
    background: #484848;
}

::-webkit-scrollbar-thumb:hover {
    background: #777777;
}

